Added acl control rules image and tweaked the logic to make it easier to follow.

--- a/acl-reference.ipynb
+++ b/acl-reference.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/pinecone-field/notebook-sandbox/blob/main/acl-reference.ipynb)\n",
+    "\n",
+    "This notebook provides a reference for how to create Access Control List(ACL) rules for Retrieval Augmented Generation(RAG) based vector search.\n",
+    "\n",
+    "![alt text](acl_rules.png)\n",
+    "\n",
     "# Step #1 - Install dependencies"
    ]
   },
@@ -62,11 +68,11 @@
     "# Step #3 - Generate 5000 vectors\n",
     "\n",
     "### Namespace ACL filter \n",
-    "1. Randomly pick a workspace_id: \"workspace-1\", \"workspace-2\", \"workspacep-3\"\n",
+    "1. Randomly pick a workspace_id: \"1\", \"2\", \"3\"\n",
     "\n",
     "### Meta-data ACL filter \n",
-    "2. Randomly pick a group_id: \"group-1\", \"group-2\", \"group-3\"\n",
-    "3. Randomly pick a subgroup_id: \"subgroup-1\", \"subgroup-2\", \"subgroup-3\"\n",
+    "2. Randomly pick a group_id: \"1\", \"2\", \"3\"\n",
+    "3. Randomly pick a doc_type_id: \"1\", \"2\", \"3\"\n",
     "4. Generate a dummy vector embedding using a value seed that gets incremented for each additional vector\n",
     "\n",
     "### Set vector ID to doc_id with child chunk_id composite key\n",
@@ -88,8 +94,8 @@
     "    doc_id = 1\n",
     "    for _ in range(100):\n",
     "        vectors = []\n",
-    "        meta_data = {\"group_id\": random.choice([\"group-1\", \"group-2\", \"group-3\"]),\n",
-    "                     \"subgroup_id\" : random.choice([\"subgroup-1\", \"subgroup-2\", \"subgroup-3\"])}\n",
+    "        meta_data = {\"group_id\": random.choice([\"1\", \"2\", \"3\"]),\n",
+    "                     \"doc_type\" : random.choice([\"1\", \"2\", \"3\"])}\n",
     "        \n",
     "        id = uuid.uuid4()\n",
     "        chunk_count = 0\n",
@@ -101,7 +107,7 @@
     "            chunk_count = chunk_count + 1\n",
     "            float_seed = float_seed + 0.1\n",
     "        \n",
-    "        workspace = random.choice([\"workspace-1\", \"workspace-2\", \"workspace-3\"])\n",
+    "        workspace = random.choice([\"1\", \"2\", \"3\"])\n",
     "        index.upsert(vectors, namespace=workspace)\n",
     "        index.update(f\"document-{doc_id}-0\", set_metadata={\"chunk_count\": chunk_count}, namespace=workspace)\n",
     "        doc_id = doc_id + 1\n",
@@ -119,7 +125,7 @@
     "\n",
     "1. Set `workspace` to the workspace id to limit query results to a specific namespace\n",
     "1. Alter `group_ids` list to see if group_id filter is being applied correctly\n",
-    "1. Alter `subgroup_ids` list to see if group_id filter is being applied correctly\n",
+    "1. Alter `doc_type_ids` list to see if doc_type filter is being applied correctly\n",
     "\n",
     "You should see that query results are limited to just the workspace, group_ids and subgroup_ids specified in the \n",
     "`acl_query()` function."
@@ -131,19 +137,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def acl_query(group_ids, subgroup_ids, workspace, top_k, vector):\n",
+    "def acl_query(group_ids, doctype_ids, workspace, top_k, vector):\n",
     "    query_results = index.query(vector=vector, top_k=top_k, namespace=workspace, include_metadata=True,\n",
     "                                filter={ \"$and\": [{ \"group_id\": { \"$in\": group_ids } }, \n",
-    "                                                  { \"subgroup_id\": { \"$in\": subgroup_ids } }]}).matches\n",
+    "                                                  { \"doc_type\": { \"$in\": doctype_ids } }]}).matches\n",
     "    return query_results\n",
     "\n",
-    "workspace = \"workspace-3\"\n",
-    "group_ids = [\"group-1\",\"group-2\",\"group-3\"]\n",
-    "subgroup_ids = [\"subgroup-1\",\"subgroup-2\",\"subgroup-3\"]   \n",
+    "workspace = \"3\"\n",
+    "group_ids = [\"1\",\"2\",\"3\"]\n",
+    "doctype_ids = [\"1\",\"2\",\"3\"]   \n",
     "\n",
     "vector = np.full(shape=DIMENSNIONS, fill_value=0.1).tolist()\n",
     "\n",
-    "print(acl_query(group_ids, subgroup_ids, workspace, 10, vector))\n"
+    "print(acl_query(group_ids, doctype_ids, workspace, 10, vector))\n"
    ]
   },
   {
@@ -165,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id = 'document-24-42'\n",
+    "id = 'document-7-16'\n",
     "delete_ids = []\n",
     "\n",
     "def get_doc_id(id):\n",
@@ -216,9 +222,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index.delete(delete_all=True, namespace=\"workspace-1\")\n",
-    "index.delete(delete_all=True, namespace=\"workspace-2\")\n",
-    "index.delete(delete_all=True, namespace=\"workspace-3\")\n",
+    "index.delete(delete_all=True, namespace=\"1\")\n",
+    "index.delete(delete_all=True, namespace=\"2\")\n",
+    "index.delete(delete_all=True, namespace=\"3\")\n",
     "\n",
     "index.describe_index_stats()"
    ]
